# nanopore

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
notebooks/: nanopore_exploration.ipynb
notes/: setup_instructions.md
scripts/: analyze_reads.py  download_data.py  verify_data.py
