[project]
name = "nanopore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "biopython>=1.85",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nanoplot>=1.46.1",
    "numpy>=2.3.3",
    "ont-fast5-api>=4.1.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
